2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs: Track api
	  changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.addin.xml: Merged the extension points for
	  project and solution option panels into a single extension point. A
	  single extension point will now be used for all kinds of items.
	  Extension conditions can be used to make panels visible only for
	  some specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/NodeEditorDialog.cs,
	  MonoDevelop.AddinAuthoring/NodeSetEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/NodeTypeEditorDialog.cs,
	  MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs,
	  MonoDevelop.AddinAuthoring/NewExtensionPointDialog.cs,
	  MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
	  MonoDevelop.AddinAuthoring/SelectNodeSetDialog.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs,
	  MonoDevelop.AddinAuthoring/ExtensionPointsEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectReference.cs,
	  MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinOptionPanelWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs,
	  MonoDevelop.AddinAuthoring/NodeEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectExtension.cs,