@@ -1,3 +1,11 @@
+2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
+	  MonoDevelop.AddinAuthoring/AddinData.cs,
+	  MonoDevelop.AddinAuthoring/RegistryExtensionNode.cs: Moved
+	  serialization engine to MonoDevelop.Core. Use new syntax for
+	  specifying attribute scope.
+
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* configure, MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.
